tests/errors/pprn_loop.tau
func test() -> int{
    return #main();
}
func bar(x: int) -> int{
    return x;
}
public func main() -> int{
    return #bar(test());
}
